--- a/src/main/resources/com/di/civ/map.fxml
+++ b/src/main/resources/com/di/civ/map.fxml
@@ -4,19 +4,33 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane alignment="CENTER" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/16" fx:controller="com.di.civ.MapController">
+<GridPane fx:id="root" alignment="CENTER" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.di.civ.MapController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
+    <!--
+    <Label fx:id="cell00" GridPane.rowIndex="0" GridPane.columnIndex="0" text="0,0"/>
+    <Label fx:id="cell10" GridPane.rowIndex="1" GridPane.columnIndex="0" text="1,0"/>
+    <Label fx:id="cell20" GridPane.rowIndex="2" GridPane.columnIndex="0" text="2,0"/>
 
-    <Label fx:id="welcomeText" GridPane.rowIndex="2" />
-    <Button onAction="#onHelloButtonClick" text="Hello!" GridPane.rowIndex="2" />
+    <Label fx:id="cell01" GridPane.rowIndex="0" GridPane.columnIndex="1" text="0,1"/>
+    <Label fx:id="cell11" GridPane.rowIndex="1" GridPane.columnIndex="1" text="1,1"/>
+    <Label fx:id="cell21" GridPane.rowIndex="2" GridPane.columnIndex="1" text="2,1"/>
+
+    <Label fx:id="cell02" GridPane.rowIndex="0" GridPane.columnIndex="2" text="0,2"/>
+    <Label fx:id="cell12" GridPane.rowIndex="1" GridPane.columnIndex="2" text="1,2"/>
+    <Label fx:id="cell22" GridPane.rowIndex="2" GridPane.columnIndex="2" text="2,2"/>
+
+
     <columnConstraints>
-        <ColumnConstraints />
+        <ColumnConstraints minWidth="10.0" prefWidth="100.0"  />
+        <ColumnConstraints minWidth="10.0" prefWidth="100.0" />
+        <ColumnConstraints minWidth="10.0" prefWidth="100.0" />
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" />
-        <RowConstraints />
+        <RowConstraints minHeight="10.0" prefHeight="100.0" />
+        <RowConstraints minHeight="10.0" prefHeight="100.0" />
+        <RowConstraints minHeight="10.0" prefHeight="100.0" />
     </rowConstraints>
+    -->
 </GridPane>
